[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcalerts"
version = "0.3.1"
description = "A Python decorator to send Discord webhook notifications before and after function execution."
authors = [
    { name = "WoolyMamooth" }
]
license = { text = "GNU General Public License v3 (GPLv3)" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/WoolyMamooth/dcalerts"

[tool.setuptools]
packages = ["dcalerts"]